Require freebsd-buildutils >= 9.0-3. (Closes: #659913)
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4096 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,9 @@ freebsd-libs (9.0-2) UNRELEASED; urgency=low
   * Remove all CAM kernel headers to ensure system-wide version is used
     instead.
   * Require kfreebsd-kernel-headers >= 0.73 (for sys/_stdint.h).
+  * Require freebsd-buildutils >= 9.0-3. (Closes: #659913)
 
- -- Robert Millan <rmh@debian.org>  Wed, 15 Feb 2012 22:16:53 +0100
+ -- Robert Millan <rmh@debian.org>  Wed, 15 Feb 2012 22:18:00 +0100
 
 freebsd-libs (9.0-1) unstable; urgency=low
 
