--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,10 @@
-freebsd-libs (9.0-2) UNRELEASED; urgency=low
+freebsd-libs (9.0+ds1-2) UNRELEASED; urgency=low
 
   [ Jérémy Bobbio ]
   * Fix libnetgraph4 Description. (Closes: #658501)
 
   [ Robert Millan ]
-  * libsbuf6.symbols: Remove sbuf_overflowed (it wasn't present in 9.0-
-    1).
+  * libsbuf6.symbols: Remove sbuf_overflowed (it wasn't present in 9.0-1).
   * Remove all CAM kernel headers to ensure system-wide version is used
     instead.
   * Require kfreebsd-kernel-headers >= 0.73 (for sys/_stdint.h).
