Upload to unstable
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4104 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (9.0+ds1-2) UNRELEASED; urgency=low
+freebsd-libs (9.0+ds1-2) unstable; urgency=low
 
   [ Jérémy Bobbio ]
   * Fix libnetgraph4 Description. (Closes: #658501)
@@ -10,7 +10,7 @@ freebsd-libs (9.0+ds1-2) UNRELEASED; urgency=low
   * Require kfreebsd-kernel-headers >= 0.73 (for sys/_stdint.h).
   * Require freebsd-buildutils >= 9.0-3. (Closes: #659913)
 
- -- Robert Millan <rmh@debian.org>  Wed, 15 Feb 2012 22:18:00 +0100
+ -- Robert Millan <rmh@debian.org>  Wed, 15 Feb 2012 23:17:28 +0100
 
 freebsd-libs (9.0-1) unstable; urgency=low
 
