kvm.h: Use <bsd/nlist.h> rather than <nlist.h>. (Closes: #657772)
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4126 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (9.0+ds1-2) UNRELEASED; urgency=low
+
+  * kvm.h: Use <bsd/nlist.h> rather than <nlist.h>. (Closes: #657772)
+
+ -- Robert Millan <rmh@debian.org>  Sun, 26 Feb 2012 11:59:06 +0100
+
 freebsd-libs (9.0+ds1-1) unstable; urgency=low
 
   [ Jérémy Bobbio ]
