--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 freebsd-libs (9.0+ds1-2) UNRELEASED; urgency=low
 
   * kvm.h: Use <bsd/nlist.h> rather than <nlist.h>. (Closes: #657772)
+  * bsfq_redefinition.diff: Remove redundant definition of bsfq().
 
- -- Robert Millan <rmh@debian.org>  Sun, 26 Feb 2012 11:59:06 +0100
+ -- Robert Millan <rmh@debian.org>  Sun, 26 Feb 2012 12:26:21 +0100
 
 freebsd-libs (9.0+ds1-1) unstable; urgency=low
 
