--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 freebsd-libs (9.0+ds1-2) UNRELEASED; urgency=low
 
   * kvm.h: Use <bsd/nlist.h> rather than <nlist.h>. (Closes: #657772)
-  * bsfq_redefinition.diff: Remove redundant definition of bsfq().
+  * Remove redundant definitions of bsfq() and bsfl().
 
  -- Robert Millan <rmh@debian.org>  Sun, 26 Feb 2012 12:26:21 +0100
 
