--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ freebsd-libs (9.0+ds1-2) UNRELEASED; urgency=low
 
   * kvm.h: Use <bsd/nlist.h> rather than <nlist.h>. (Closes: #657772)
   * Remove redundant definitions of bsfq() and bsfl().
+  * cdefs_macros.diff: Also fix __va_list in <sys/sbuf.h>.
 
- -- Robert Millan <rmh@debian.org>  Sun, 26 Feb 2012 12:26:21 +0100
+ -- Robert Millan <rmh@debian.org>  Sat, 17 Mar 2012 00:02:38 +0100
 
 freebsd-libs (9.0+ds1-1) unstable; urgency=low
 
