Upload to unstable
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4157 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-freebsd-libs (9.0+ds1-2) UNRELEASED; urgency=low
+freebsd-libs (9.0+ds1-2) unstable; urgency=low
 
   * kvm.h: Use <bsd/nlist.h> rather than <nlist.h>. (Closes: #657772)
   * Remove redundant definitions of bsfq() and bsfl().
   * cdefs_macros.diff: Also fix __va_list in <sys/sbuf.h>.
 
- -- Robert Millan <rmh@debian.org>  Sat, 17 Mar 2012 00:02:38 +0100
+ -- Robert Millan <rmh@debian.org>  Mon, 19 Mar 2012 22:31:50 +0100
 
 freebsd-libs (9.0+ds1-1) unstable; urgency=low
 
