04_libkvm.diff: Remove struct loadavg kludge, B-D on libc0.1-dev (>= 2.13-31) instead.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4227 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (9.0+ds1-3) UNRELEASED; urgency=low
+
+  * 04_libkvm.diff: Remove struct loadavg kludge, B-D on libc0.1-dev (>=
+    2.13-31) instead.
+
+ -- Robert Millan <rmh@debian.org>  Sat, 21 Apr 2012 23:20:51 +0200
+
 freebsd-libs (9.0+ds1-2) unstable; urgency=low
 
   * kvm.h: Use <bsd/nlist.h> rather than <nlist.h>. (Closes: #657772)
