Fix a pair of typos in debian/control.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4233 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ freebsd-libs (9.0+ds1-3) UNRELEASED; urgency=low
 
   * 04_libkvm.diff: Remove struct loadavg kludge, B-D on libc0.1-dev (>=
     2.13-31) instead.
+  * Fix a pair of typos in debian/control.
 
- -- Robert Millan <rmh@debian.org>  Sat, 21 Apr 2012 23:20:51 +0200
+ -- Robert Millan <rmh@debian.org>  Sun, 22 Apr 2012 11:30:53 +0200
 
 freebsd-libs (9.0+ds1-2) unstable; urgency=low
 
