--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 freebsd-libs (9.0+ds1-3) UNRELEASED; urgency=low
 
+  [ Robert Millan ]
   * 04_libkvm.diff: Remove struct loadavg kludge, B-D on libc0.1-dev (>=
     2.13-31) instead.
   * Fix a pair of typos in debian/control.
+
+  [ Guillem Jover ]
+  * Remove Debian revisions from versions in libmemstat3, libsbuf6 and libcam6
+    symbols files.
 
  -- Robert Millan <rmh@debian.org>  Sun, 22 Apr 2012 11:30:53 +0200
 
