kvm_size_t_kludge.diff: Temporary kludge to define size_t (requires kfreebsd-kernel-headers >= 0.81).  (Closes: #673431)
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4267 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ freebsd-libs (9.0+ds1-3) UNRELEASED; urgency=low
   * 04_libkvm.diff: Remove struct loadavg kludge, B-D on libc0.1-dev (>=
     2.13-31) instead.
   * Fix a pair of typos in debian/control.
+  * kvm_size_t_kludge.diff: Temporary kludge to define size_t (requires
+    kfreebsd-kernel-headers >= 0.81).  (Closes: #673431)
 
   [ Guillem Jover ]
   * Remove Debian revisions from versions in libmemstat3, libsbuf6 and libcam6
