Fix FTBFS with latest kfreebsd-kernel-headers.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4273 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,12 +6,13 @@ freebsd-libs (9.0+ds1-3) UNRELEASED; urgency=low
   * Fix a pair of typos in debian/control.
   * kvm_size_t_kludge.diff: Temporary kludge to define size_t (requires
     kfreebsd-kernel-headers >= 0.81).  (Closes: #673431)
+  * Fix FTBFS with latest kfreebsd-kernel-headers.
 
   [ Guillem Jover ]
   * Remove Debian revisions from versions in libmemstat3, libsbuf6 and libcam6
     symbols files.
 
- -- Robert Millan <rmh@debian.org>  Sun, 22 Apr 2012 11:30:53 +0200
+ -- Robert Millan <rmh@debian.org>  Mon, 21 May 2012 16:58:01 +0200
 
 freebsd-libs (9.0+ds1-2) unstable; urgency=low
 
