--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (9.0+ds1-3) UNRELEASED; urgency=low
+freebsd-libs (9.0+ds1-3) unstable; urgency=low
 
   [ Robert Millan ]
   * 04_libkvm.diff: Remove struct loadavg kludge, B-D on libc0.1-dev (>=
@@ -12,7 +12,7 @@ freebsd-libs (9.0+ds1-3) UNRELEASED; urgency=low
   * Remove Debian revisions from versions in libmemstat3, libsbuf6 and libcam6
     symbols files.
 
- -- Robert Millan <rmh@debian.org>  Mon, 21 May 2012 16:58:01 +0200
+ -- Robert Millan <rmh@debian.org>  Fri, 25 May 2012 18:37:58 +0200
 
 freebsd-libs (9.0+ds1-2) unstable; urgency=low
 
