--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (9.0+ds1-5) UNRELEASED; urgency=low
+
+  * Remove debian/patches/implicit-declaration (obsoleted by
+    freebsd-glue 0.0.5).
+
+ -- Robert Millan <rmh@debian.org>  Wed, 19 Jun 2013 14:23:04 +0200
+
 freebsd-libs (9.0+ds1-4) unstable; urgency=low
 
   [ Christoph Egger ]
