Add libelf and libdwarf
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4539 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-freebsd-libs (9.0+ds1-5) UNRELEASED; urgency=low
+freebsd-libs (9.0+ds2-1) UNRELEASED; urgency=low
 
+  * Add libelf and libdwarf.
   * Remove debian/patches/implicit-declaration (obsoleted by
     freebsd-glue 0.0.5).
 
