--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-freebsd-libs (9.0+ds2-1) UNRELEASED; urgency=low
+freebsd-libs (9.0+ds2-1) experimental; urgency=low
 
   * Add libelf and libdwarf.
   * Remove debian/patches/implicit-declaration (obsoleted by
     freebsd-glue 0.0.5).
 
- -- Robert Millan <rmh@debian.org>  Wed, 19 Jun 2013 14:23:04 +0200
+ -- Robert Millan <rmh@debian.org>  Wed, 19 Jun 2013 21:49:43 +0200
 
 freebsd-libs (9.0+ds1-4) unstable; urgency=low
 
