--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (9.1-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+    - Sync all patches.
+
+ -- Robert Millan <rmh@debian.org>  Tue, 09 Jul 2013 22:49:44 +0200
+
 freebsd-libs (9.0+ds2-1) experimental; urgency=low
 
   * Add libelf and libdwarf.
