Enable __FreeBSD_version when building freebsd-libs sources.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4728 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ freebsd-libs (9.1-1) UNRELEASED; urgency=low
 
   * New upstream release.
     - Sync all patches.
+  * Enable __FreeBSD_version when building freebsd-libs sources.
 
  -- Robert Millan <rmh@debian.org>  Tue, 09 Jul 2013 22:49:44 +0200
 
