--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ freebsd-libs (9.1-1) UNRELEASED; urgency=low
   * New upstream release.
     - Sync all patches.
   * Enable __FreeBSD_version when building freebsd-libs sources.
+  * preserve_libkvm_abi.diff (and no_kvm_uread_in_freebsd10.diff):
+    Backport fix from upstream to preserve 9.0 ABI in libkvm.
 
  -- Robert Millan <rmh@debian.org>  Tue, 09 Jul 2013 22:49:44 +0200
 
