Acknowledge new symbols in libusbhid4debian, libelf-freebsd-1, libusb2debian and libcam6.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4732 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ freebsd-libs (9.1-1) UNRELEASED; urgency=low
 
   * New upstream release.
     - Sync all patches.
+    - Acknowledge new symbols in libusbhid4debian, libelf-freebsd-1,
+      libusb2debian and libcam6.
   * Enable __FreeBSD_version when building freebsd-libs sources.
   * preserve_libkvm_abi.diff (and no_kvm_uread_in_freebsd10.diff):
     Backport fix from upstream to preserve 9.0 ABI in libkvm.
