--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (9.1-2) UNRELEASED; urgency=low
+
+  * Temporarily remove libelf and libdwarf, until namespace issues are
+    fixed.
+
+ -- Robert Millan <rmh@debian.org>  Tue, 16 Jul 2013 12:17:26 +0200
+
 freebsd-libs (9.1-1) experimental; urgency=low
 
   * New upstream release.
