--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (9.1-2) UNRELEASED; urgency=low
+freebsd-libs (9.1+ds1-1) experimental; urgency=low
 
   * Temporarily remove libelf and libdwarf, until namespace issues are
     fixed.
