--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (9.1+ds1-2) UNRELEASED; urgency=low
+freebsd-libs (9.1+ds1-2) unstable; urgency=low
 
   * Bump freebsd-glue B-D (for roundup2).
 
