--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (9.1+ds1-3) UNRELEASED; urgency=low
+
+  [ Petr Salinger ]
+  * extend cdefs_macros.diff in libusb.h part
+
+ -- Robert Millan <rmh@debian.org>  Tue, 16 Jul 2013 15:24:27 +0200
+
 freebsd-libs (9.1+ds1-2) unstable; urgency=low
 
   * Bump freebsd-glue B-D (for roundup2).
