Switch to canonical Vcs URLs
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4799 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ freebsd-libs (9.1+ds1-3) UNRELEASED; urgency=low
   * extend cdefs_macros.diff in libusb.h part
   * libusb really needs libbsd
 
+  [ Guillem Jover ]
+  * Switch to canonical Vcs URLs.
+
  -- Robert Millan <rmh@debian.org>  Tue, 16 Jul 2013 15:24:27 +0200
 
 freebsd-libs (9.1+ds1-2) unstable; urgency=low
