--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ freebsd-libs (9.1+ds1-3) UNRELEASED; urgency=low
     - Switch binary-indep and binary-arch to depend on install-indep and
       install-arch targets respectively.
   * Now using Standards-Version 3.9.4.
+  * Add missing old symbols to libkvm0 and libsbuf6 symbols files.
 
  -- Robert Millan <rmh@debian.org>  Tue, 16 Jul 2013 15:24:27 +0200
 
