Add missing kvm_dpcpu_setcpu(3) man page to libkvm-dev
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4803 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ freebsd-libs (9.1+ds1-3) UNRELEASED; urgency=low
       install-arch targets respectively.
   * Now using Standards-Version 3.9.4.
   * Add missing old symbols to libkvm0 and libsbuf6 symbols files.
+  * Add missing kvm_dpcpu_setcpu(3) man page to libkvm-dev.
 
  -- Robert Millan <rmh@debian.org>  Tue, 16 Jul 2013 15:24:27 +0200
 
