--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (9.1+ds1-4) UNRELEASED; urgency=low
+
+  * Create $(DESTDIR) on install-indep, otherwise dh_install with
+    --list-missing is unhappy (arguably a bug in debhelper).
+
+ -- Guillem Jover <guillem@debian.org>  Mon, 29 Jul 2013 12:28:44 +0200
+
 freebsd-libs (9.1+ds1-3) unstable; urgency=low
 
   [ Petr Salinger ]
