--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,16 @@
-freebsd-libs (9.1+ds1-4) UNRELEASED; urgency=low
+freebsd-libs (9.2-1) unstable; urgency=low
 
+  * New upstream release.
+    - Refresh all patches.
+    - Remove preserve_libkvm_abi.diff and no_kvm_uread_in_freebsd10.diff
+      (obsoleted by kvm_uread() re-addition in stable/9).
+    - Update symbols in libsbu6, libcam6 and libusb2debian.
+
+  [ Guillem Jover ]
   * Create $(DESTDIR) on install-indep, otherwise dh_install with
     --list-missing is unhappy (arguably a bug in debhelper).
 
- -- Guillem Jover <guillem@debian.org>  Mon, 29 Jul 2013 12:28:44 +0200
+ -- Robert Millan <rmh@debian.org>  Wed, 02 Oct 2013 23:28:58 +0200
 
 freebsd-libs (9.1+ds1-3) unstable; urgency=low
 
