--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (9.2+ds1-1) UNRELEASED; urgency=low
+
+  * Add libelf and libdwarf, this time changing the SONAME to avoid namespace
+    collisions.
+
+ -- Robert Millan <rmh@debian.org>  Wed, 09 Oct 2013 23:21:11 +0200
+
 freebsd-libs (9.2-1) unstable; urgency=low
 
   * New upstream release.
