Upload to experimental
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5029 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (9.2+ds1-1) UNRELEASED; urgency=low
+freebsd-libs (9.2+ds1-1) experimental; urgency=low
 
   * Add libelf and libdwarf, this time changing the SONAME to avoid namespace
     collisions.
