Remove myself from Uploaders
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5072 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (9.2+ds1-2) UNRELEASED; urgency=low
+
+  * Remove myself from Uploaders.
+
+ -- Guillem Jover <guillem@debian.org>  Wed, 16 Oct 2013 21:35:48 +0200
+
 freebsd-libs (9.2+ds1-1) experimental; urgency=low
 
   * Add libelf and libdwarf, this time changing the SONAME to avoid namespace
