--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 freebsd-libs (9.2+ds1-2) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
   * Remove myself from Uploaders.
 
- -- Guillem Jover <guillem@debian.org>  Wed, 16 Oct 2013 21:35:48 +0200
+  [ Robert Millan ]
+  * Fix description for libelf packages.
+
+ -- Robert Millan <rmh@debian.org>  Sun, 20 Oct 2013 15:27:23 +0200
 
 freebsd-libs (9.2+ds1-1) experimental; urgency=low
 
