--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (9.2+ds1-2) UNRELEASED; urgency=low
+freebsd-libs (9.2+ds1-2) unstable; urgency=low
 
   [ Guillem Jover ]
   * Remove myself from Uploaders.
@@ -6,7 +6,7 @@ freebsd-libs (9.2+ds1-2) UNRELEASED; urgency=low
   [ Robert Millan ]
   * Fix description for libelf packages.
 
- -- Robert Millan <rmh@debian.org>  Sun, 20 Oct 2013 15:27:23 +0200
+ -- Robert Millan <rmh@debian.org>  Sun, 27 Oct 2013 22:39:49 +0100
 
 freebsd-libs (9.2+ds1-1) experimental; urgency=low
 
