Make libelf and libdwarf kfreebsd-any.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5102 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (9.2+ds1-3) unstable; urgency=low
+
+  * Make libelf and libdwarf kfreebsd-any.
+
+ -- Robert Millan <rmh@debian.org>  Sun, 27 Oct 2013 23:52:33 +0100
+
 freebsd-libs (9.2+ds1-2) unstable; urgency=low
 
   [ Guillem Jover ]
