--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (9.2+ds1-4) unstable; urgency=low
+
+  * Exclude libelf and libdwarf from debian/rules as well...
+
+ -- Robert Millan <rmh@debian.org>  Mon, 28 Oct 2013 01:43:54 +0100
+
 freebsd-libs (9.2+ds1-3) unstable; urgency=low
 
   * Make libelf and libdwarf kfreebsd-any.
