--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (9.2+ds1-5) UNRELEASED; urgency=low
+freebsd-libs (9.2+ds1-5) unstable; urgency=low
 
   * Fix libelf/libdwarf buildability on GNU/Linux.
 
