--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (9.2+ds1-6) UNRELEASED; urgency=low
+
+  * Bump freebsd-glue Build-Depends on 0.1.14.
+
+ -- Robert Millan <rmh@debian.org>  Wed, 30 Oct 2013 00:07:48 +0100
+
 freebsd-libs (9.2+ds1-5) unstable; urgency=low
 
   * Fix libelf/libdwarf buildability on GNU/Linux.
