--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (9.2+ds1-7) UNRELEASED; urgency=low
+
+  * Remove unnecessary bits from 04_libkvm.diff and 12_usb.diff.
+
+ -- Robert Millan <rmh@debian.org>  Wed, 06 Nov 2013 11:29:34 +0100
+
 freebsd-libs (9.2+ds1-6) unstable; urgency=low
 
   * Bump freebsd-glue Build-Depends on 0.1.14.
