--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (9.2+ds2-1) experimental; urgency=low
+
+  * Add libutil.
+
+ -- Robert Millan <rmh@debian.org>  Sat, 30 Nov 2013 13:10:29 +0100
+
 freebsd-libs (9.2+ds1-8) unstable; urgency=low
 
   * Simplify 04_libkvm.diff even further.
