Fetch source code securely (https) in get-orig-source.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5221 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (9.2+ds2-3) UNRELEASED; urgency=low
+
+  * Fetch source code securely (https) in get-orig-source.
+
+ -- Robert Millan <rmh@debian.org>  Sat, 07 Dec 2013 23:22:56 +0100
+
 freebsd-libs (9.2+ds2-2) unstable; urgency=low
 
   * Upload to unstable.
