Leave -lbsdxml untouched (latest freebsd-glue supports it).
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5224 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 freebsd-libs (9.2+ds2-3) UNRELEASED; urgency=low
 
   * Fetch source code securely (https) in get-orig-source.
+  * Leave -lbsdxml untouched (latest freebsd-glue supports it).
 
  -- Robert Millan <rmh@debian.org>  Sat, 07 Dec 2013 23:22:56 +0100
 
