Make libipx available on all architectures.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5229 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
-freebsd-libs (9.2+ds2-3) UNRELEASED; urgency=low
+freebsd-libs (9.2+ds3-1) UNRELEASED; urgency=low
 
   * Fetch source code securely (https) in get-orig-source.
   * Leave -lbsdxml untouched (latest freebsd-glue supports it).
+  * Make libipx available on all architectures.
 
  -- Robert Millan <rmh@debian.org>  Sat, 07 Dec 2013 23:22:56 +0100
 
