--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (10.0-2) UNRELEASED; urgency=low
+
+  * Improve detection of FTBFS problems on foreign platforms by passing
+    __FREEBSD_GLUE_USE_EMBEDDED_HEADERS flag to freebsd-glue.
+
+ -- Robert Millan <rmh@debian.org>  Sat, 18 Jan 2014 01:18:08 +0100
+
 freebsd-libs (10.0-1) experimental; urgency=low
 
   * New upstream release.
