--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (10.0-2) UNRELEASED; urgency=low
+freebsd-libs (10.0-2) experimental; urgency=low
 
   * Improve detection of FTBFS problems on foreign platforms by passing
     __FREEBSD_GLUE_USE_EMBEDDED_HEADERS flag to freebsd-glue.
@@ -6,7 +6,7 @@ freebsd-libs (10.0-2) UNRELEASED; urgency=low
   * Fix Dwarf_Off size on i386-linux-gnu.
   * Bump freebsd-glue B-D to 0.2.18 (for PATH_MAX).
 
- -- Robert Millan <rmh@debian.org>  Sat, 18 Jan 2014 01:18:08 +0100
+ -- Robert Millan <rmh@debian.org>  Fri, 24 Jan 2014 22:31:35 +0100
 
 freebsd-libs (10.0-1) experimental; urgency=low
 
