--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (10.0-3) UNRELEASED; urgency=low
+
+  * Add missing B-D on m4.
+
+ -- Robert Millan <rmh@debian.org>  Sat, 25 Jan 2014 23:09:11 +0100
+
 freebsd-libs (10.0-2) experimental; urgency=low
 
   * Improve detection of FTBFS problems on foreign platforms by passing
