Prepare Makefile.inc to be moved into orig tarball.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5387 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 freebsd-libs (10.0-3) UNRELEASED; urgency=low
 
   * Add missing B-D on m4.
+  * Prepare Makefile.inc to be moved into orig tarball.
 
  -- Robert Millan <rmh@debian.org>  Sat, 25 Jan 2014 23:09:11 +0100
 
