--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+freebsd-libs (10.0-4) experimental; urgency=low
+
+  * libusb_handle_events_completed.diff: Cherry-pick from upstream
+    (add libusb_handle_events_completed and
+    libusb_handle_events_timeout_completed). (Closes: #738986)
+
+ -- Robert Millan <rmh@debian.org>  Sat, 15 Feb 2014 15:43:59 +0100
+
 freebsd-libs (10.0-3) experimental; urgency=low
 
   * Add missing B-D on m4.
