--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (10.0-7) UNRELEASED; urgency=medium
+
+  * Add empty LIBUSB_CALL macro, to be compatible to the libusb 1.0-API
+    From upstream 10-STABLE.  Thanks, Scott Howard.  (Closes: #749157)
+
+ -- Steven Chamberlain <steven@pyro.eu.org>  Sun, 13 Jul 2014 21:47:01 +0100
+
 freebsd-libs (10.0-6) unstable; urgency=medium
 
   * Add <stdint.h> include to kvm.h to fix header buildability.
