Add myself to uploaders
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5508 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-freebsd-libs (10.1~pre1-1) UNRELEASED; urgency=medium
+freebsd-libs (10.1~pre1-1) experimental; urgency=medium
 
   * Snapshot from upstream release branch
+  * Add myself to uploaders
 
  -- Christoph Egger <christoph@debian.org>  Sun, 31 Aug 2014 11:13:09 -0700
 
