--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,9 @@ freebsd-libs (10.1~pre1-2) UNRELEASED; urgency=medium
   [ Steven Chamberlain]
   * Raise Build-Depends on freebsd-glue to >= 0.2.20~, to not be
     affected by #759249 if the installed libbsd-dev is newer
-  * Update libcam6.symbols with new symbols
+  * Update with new symbols:
+    - libcam6.symbols
+    - libkvm6.symbols
 
  -- GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>  Tue, 02 Sep 2014 14:00:18 +0100
 
