Use a particular SVN revision from upstream 10-STABLE
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5538 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-freebsd-libs (10.1~pre1-2) UNRELEASED; urgency=medium
+freebsd-libs (10.1~svn271690-1) UNRELEASED; urgency=medium
 
   [ Steven Chamberlain]
+  * New upstream snapshot of 10.1-PRERELEASE
   * Raise Build-Depends on freebsd-glue to >= 0.2.20~, to not be
     affected by #759249 if the installed libbsd-dev is newer
   * Update with new symbols:
