--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (10.1~svn272464-1) UNRELEASED; urgency=medium
+freebsd-libs (10.1~svn272464-1) unstable; urgency=low
 
   [ Petr Salinger ]
   * New upstream snapshot of 10.1-RC1
@@ -23,7 +23,10 @@ freebsd-libs (10.1~svn272464-1) UNRELEASED; urgency=medium
   * In get-orig-source, svn export with --ignore-keywords so that
     revision tags do not fuzzy the patches
 
- -- GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>  Mon, 22 Sep 2014 23:11:27 +0100
+  [ Christoph Egger ]
+  * Upload to unstable
+
+ -- Steven Chamberlain <steven@pyro.eu.org>  Mon, 22 Sep 2014 23:11:27 +0100
 
 freebsd-libs (10.1~svn271690-1) experimental; urgency=medium
 
