--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
-freebsd-libs (10.1~svn272464-2) UNRELEASED; urgency=medium
+freebsd-libs (10.1~svn273240-1) UNRELEASED; urgency=medium
 
+  * New upstream snapshot of 10.1-RC3~
   * Build-Depend on freebsd-mk >= 10.0-5 for MK_TESTS
   * No longer try to set MK_TESTS in debian/rules;  use WITH_TESTS
     instead (Closes: #764956)
 
- -- Steven Chamberlain <steven@pyro.eu.org>  Sun, 12 Oct 2014 17:14:18 +0100
+ -- Steven Chamberlain <steven@pyro.eu.org>  Fri, 17 Oct 2014 13:36:01 +0000
 
 freebsd-libs (10.1~svn272464-1) unstable; urgency=low
 
