--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (10.1~svn273304-2) UNRELEASED; urgency=medium
+
+  * Add myself to Uploaders
+
+ -- Steven Chamberlain <steven@pyro.eu.org>  Wed, 22 Oct 2014 13:34:47 +0100
+
 freebsd-libs (10.1~svn273304-1) unstable; urgency=medium
 
   * New upstream snapshot of 10.1-RC3~
