--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 freebsd-libs (10.3~svn296373-1) UNRELEASED; urgency=medium
 
   * New upstream snapshot of 10.3-RC1
+  * Actually use the proper build architecture compiler
+    (thanks, Helmut Grohne!)
   * Add myself to Uploaders
 
  -- Steven Chamberlain <steven@pyro.eu.org>  Sat, 05 Mar 2016 01:12:41 +0000
