* Make get-orig-source tarball reproducible * Change source tarball compression algorithm to XZ
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5891 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ freebsd-libs (10.3~svn296373-1) UNRELEASED; urgency=medium
   * New upstream snapshot of 10.3-RC1
   * Actually use the proper build architecture compiler
     (thanks, Helmut Grohne!)
+  * Make get-orig-source tarball reproducible
+  * Change source tarball compression algorithm to XZ
   * Add myself to Uploaders
 
  -- Steven Chamberlain <steven@pyro.eu.org>  Sat, 05 Mar 2016 01:12:41 +0000
