--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,8 @@ freebsd-libs (10.3~svn296373-1) UNRELEASED; urgency=medium
   * Pick upstream SVN r267110, for libusb-1.0 compatibility library to
     report version as 1.0.13 (Closes: #758405)
       - libusb_reported_version.diff
+  * Add libusb_set_auto_detach_kernel_driver stub (Closes: #816031)
+      - libusb_set_auto_detach_kernel_driver.diff
   * Add myself to Uploaders
 
  -- Steven Chamberlain <steven@pyro.eu.org>  Sat, 05 Mar 2016 01:12:41 +0000
