--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ freebsd-libs (10.3~svn296373-1) UNRELEASED; urgency=medium
       - libusb_reported_version.diff
   * Add libusb_set_auto_detach_kernel_driver stub (Closes: #816031)
       - libusb_set_auto_detach_kernel_driver.diff
+  * Add -lutil-freebsd and -lbsd to lib/libutil/tests/Makefile LDFLAGS
+      - makefiles.diff
   * Add myself to Uploaders
 
  -- Steven Chamberlain <steven@pyro.eu.org>  Sat, 05 Mar 2016 01:12:41 +0000
