Set Debian-specific /usr/lib/pkgconfig path
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@5906 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,8 @@ freebsd-libs (10.3~svn296373-1) UNRELEASED; urgency=medium
   * Build-Depend on kfreebsd-kernel-headers >= 10.3 for cam/scsi/
   * Build-Depend on freebsd-mk >= 10.3 for *.test.mk
   * Don't yet build WITH_TESTS=yes
+  * Set Debian-specific /usr/lib/pkgconfig path
+      - pkgconfig_dir.diff
   * Add myself to Uploaders
 
  -- Steven Chamberlain <steven@pyro.eu.org>  Sat, 05 Mar 2016 01:12:41 +0000
